err/cubicweb-codenaf.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cubicweb_codenaf-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/cubicweb'...
Listing './share/cubicweb/cubes'...
Listing './share/cubicweb/cubes/codenaf'...
Compiling './share/cubicweb/cubes/codenaf/__init__.py'...
Compiling './share/cubicweb/cubes/codenaf/__pkginfo__.py'...
Listing './share/cubicweb/cubes/codenaf/bin'...
Compiling './share/cubicweb/cubes/codenaf/bin/import-naf-from-dbf.py'...
Listing './share/cubicweb/cubes/codenaf/data'...
Compiling './share/cubicweb/cubes/codenaf/dbf.py'...
***   File "./share/cubicweb/cubes/codenaf/dbf.py", line 61
    raise IOError, 'The file is not large enough to be a dbf file'
                 ^
SyntaxError: invalid syntax

Compiling './share/cubicweb/cubes/codenaf/entities.py'...
Listing './share/cubicweb/cubes/codenaf/i18n'...
Listing './share/cubicweb/cubes/codenaf/migration'...
Compiling './share/cubicweb/cubes/codenaf/migration/postcreate.py'...
Compiling './share/cubicweb/cubes/codenaf/schema.py'...
Compiling './share/cubicweb/cubes/codenaf/views.py'...
Listing './share/python-wheels'...
